Fix donation columns on tablet and smaller screens

--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -382,12 +382,12 @@
     min-height: auto;
     border-radius: 0;
     padding: 2rem 5%;
-    background: #edeced;
+    background: #F8FAFC;
     border: none;
   }
 
   .flexContainer .column:nth-of-type(2) {
-    background: #d9dee2;
+    background: #FFFFFF;
   }
 
   .button_two {
